fix: update project name to "MeuGPS LABS" in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meugps.tech",
+  "name": "MeuGPS LABS",
   "version": "1.0.0",
   "description": "![Status do Deploy](https://img.shields.io/github/actions/workflow/status/reltonlima/meugps.tech/main.yml?branch=main&style=flat-square)\r ![Licença](https://img.shields.io/github/license/reltonlima/meugps.tech?style=flat-square)",
   "main": "index.js",
