--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "![Status do Deploy](https://img.shields.io/github/actions/workflow/status/reltonlima/meugps.tech/main.yml?branch=main&style=flat-square)\r ![Licença](https://img.shields.io/github/license/reltonlima/meugps.tech?style=flat-square)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/esp32mqtt-server.js",
+    "dev": "node src/esp32mqtt-server.js",
+    "server": "node src/server.js"
   },
   "repository": {
     "type": "git",
